--- a/iFindFriendsMini.indigoPlugin/Contents/Info.plist
+++ b/iFindFriendsMini.indigoPlugin/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>PluginVersion</key>
-	<string>0.0.8</string>
+	<string>0.1.1</string>
 	<key>ServerApiVersion</key>
 	<string>1.0</string>
 	<key>IwsApiVersion</key>
@@ -20,7 +20,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string></string>
+			<string>http://forums.indigodomo.com/viewtopic.php?t=19950</string>
 		</dict>
 	</array>
 </dict>
